[gd_scene load_steps=3 format=3 uid="uid://b4xhh0srl2yh7"]

[ext_resource type="Script" path="res://Scripts/DialogueUI.gd" id="1_dialogue"]

[sub_resource type="Theme" id="Theme_dialogue"]
default_font_size = 18

[node name="DialogueUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_dialogue")

[node name="NPCTextContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0.9)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="NPCTextContainer"]
layout_mode = 2

[node name="NPCNameLabel" type="Label" parent="NPCTextContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_dialogue")
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "NPC Name"

[node name="DialogueLabel" type="Label" parent="NPCTextContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
theme = SubResource("Theme_dialogue")
text = "NPC dialogue appears here as they speak..."
autowrap_mode = 3

[node name="InputPrompt" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -60.0
offset_right = 250.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="InputField" type="LineEdit" parent="InputPrompt"]
layout_mode = 2
theme = SubResource("Theme_dialogue")
placeholder_text = "Type or hold V for voice..."
clear_button_enabled = true
